--- a/Flex Box/app.css
+++ b/Flex Box/app.css
@@ -9,13 +9,13 @@ h1 {
 #container {
     background-color: #003049;
     width: 90%;
-    height: 500px;
+    /* height: 200px; */
     margin: 0 auto;
     border: 5px solid #003049;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
     align-items: baseline;
     /* to remember */
     /* flex-direction: row-reverse;
@@ -23,8 +23,26 @@ h1 {
 }
 
 #container div {
+    width: 200px;
+    height: 200px;
+    min-width: 200px;
+    max-width: 400px;
+    text-align: center;
+    flex-basis: 200px;
+}
+
+div:nth-of-type(1) {
+    flex-grow: 1;
+}
+
+div:nth-of-type(4) {
+    flex-grow: 0.7;
+}
+
+
+/* #container div {
     width: 10%;
     height: 35%;
     font-size: 65px;
     text-align: center;
-}
+} */
