--- a/MediaQuery/app.css
+++ b/MediaQuery/app.css
@@ -8,18 +8,43 @@ h1 {
 }
 
 nav {
-    font-size: 1.5em;
+    font-size: 2em;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row;
+    align-items: center;
 }
 
-ul,
+ul {
+    flex: 1;
+    display: flex;
+    flex-flow: row;
+    max-width: 50%;
+    justify-content: space-evenly;
+}
+
 li {
     display: inline;
     margin: 0;
     padding: 0;
 }
 
-@media (min-width: 800px) and (max-width: 1000px) {
+@media (max-width: 768px) {
     h1 {
-        color: purple;
+        font-size: 4em;
+    }
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 3em;
     }
 }
