--- a/FirstApp/views/home.ejs
+++ b/FirstApp/views/home.ejs
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
+<%- include('./partials/head') %>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
-</head>
-
-<body>
     <h1>The Home Page
         <%= 'Hello world'.toUpperCase() %>
     </h1>
@@ -21,6 +10,6 @@
         itaque aliquid similique quisquam, a sunt suscipit pariatur repellat ex! Autem tempora distinctio ipsa necessitatibus delectus, soluta hic explicabo itaque adipisci corporis nisi sit impedit, voluptatum eius! Nobis cupiditate libero et iste eum
         quis quam odit maiores neque quaerat obcaecati molestias vitae similique nulla magni vel saepe consequatur excepturi rem natus qui eligendi provident, laboriosam in! Sunt.</p>
     <script src="" async defer></script>
-</body>
+    </body>
 
-</html>
+    </html>
