--- a/FirstApp/views/randomNum.ejs
+++ b/FirstApp/views/randomNum.ejs
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random number </title>
-</head>
-
-<body>
+<%- include('partials/head') %>
     <h1>The Number is
         <%= num %>
     </h1>
@@ -17,6 +7,6 @@
         <%} else{%>
             <h2>Thatat is odd number</h2>
             <% }%>
-</body>
+                </body>
 
-</html>
+                </html>
