--- a/FirstApp/views/subreddit.ejs
+++ b/FirstApp/views/subreddit.ejs
@@ -1,37 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/head') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%=name%>
-    </title>
-</head>
 
-<body>
-    <h1>You are browsing
-        <%= name %>
-    </h1>
-    <h3>
-        <%=description%>
-    </h3>
-    <hr>
+    <div class="container">
+        <h1>You are browsing
+            <%= name %>
+        </h1>
+        <h3>
+            <%=description%>
+        </h3>
+        <hr>
 
-    <% for(let post of posts){ %>
-        <article>
-            <p>
-                <%= post.title %> — <b><%= post.author %> </b>
-            </p>
+        <% for(let post of posts){ %>
+            <article>
+                <p>
+                    <%= post.title %> — <b><%= post.author %> </b>
+                </p>
 
-            <% if(post.img){ %>
-                <div>
-                    <img src="<%= post.img %>" width=300px alt=" ">
-                </div>
-                <% } %>
-        </article>
-        <% } %>
-</body>
+                <% if(post.img){ %>
+                    <div>
+                        <img src="<%= post.img %>" width=300px alt=" ">
+                    </div>
+                    <% } %>
+            </article>
+            <% } %>
+    </div>
+    </body>
 
-</html>
+    </html>
