--- a/REST/views/comments/new.ejs
+++ b/REST/views/comments/new.ejs
@@ -24,7 +24,7 @@
             <button>Submit</button>
         </form>
     </section>
-
+    <a href="http://localhost:3000/comments/">See all comments</a>
 </body>
 
 </html>
