--- a/REST/views/comments/index.ejs
+++ b/REST/views/comments/index.ejs
@@ -13,8 +13,8 @@
     <ul>
         <% for(let c of comments){ %>
             <li>
-                <%= c.comment %> - <b><%= c.username %> <a href="http://localhost:3000/comments/<%=c.id%> ">link to the post</a></b>
-                    <a href=h ttp://localhost:3000/comments/${c.id}></a>
+                <%= c.comment %> - <b><%= c.username %> </b> <a href="http://localhost:3000/comments/<%=c.id%> ">link to the post</a>
+                    <a href="http://localhost:3000/comments/"></a>
             </li>
             <% } %>
     </ul>
